@@ -2,7 +2,7 @@
 Copyright (C) 2001 Scott Finneran
 Copyright (C) 2003 Intel Corporation
 Copyright (C) 2003, 2004 Theodore A. Roth
-Copyright (C) 2005 Joerg Wunsch
+Copyright (C) 2005, 2006 Joerg Wunsch
 
 Permission is granted to make and distribute verbatim copies of this
 manual provided the copyright notice and this permission notice are
@@ -22,7 +22,7 @@ the original English.
 $Id$
 
 ..
-.TH avarice 1 "February 6, 2004"
+.TH avarice 1 "April 7, 2006"
 .LO 1
 .SH NAME
 avarice \- Provides an interface from avr-gdb to Atmel's JTAGICE box.
@@ -67,8 +67,32 @@ atmega64
 .br
 atmega128
 .br
-at90can128 (experimental)
+at90can128
+.br
+atmega164 (\fB*\fP)
+.br
+atmega324 (\fB*\fP)
+.br
+atmega644 (\fB*\fP)
+.br
+atmega329 (\fB*\fP)
+.br
+atmega3290 (\fB*\fP)
+.br
+atmega649 (\fB*\fP)
+.br
+atmega6490 (\fB*\fP)
+.br
+atmega640 (\fB*\fP)
+.br
+atmega1280 (\fB*\fP)
+.br
+atmega1281 (\fB*\fP)
+.br
+at90usb1287 (\fB*\fP)
 .RE
+.PP
+\fB*\fP \- Only supported by the JTAG ICE mkII device.
 .SS Supported File Formats
 .B avarice
 uses libbfd for reading input files. As such, it can handle any file format
@@ -87,11 +111,12 @@ Connect to JTAG ICE mkI (default).
 .BR \-2 ,\  \-\-mkII
 Connect to JTAG ICE mkII.
 .TP
-.BR \-d ,\  \-\-debug
-Enable printing of debug information.
-.TP
-.BR \-D ,\  \-\-detach
-Detach once synced with JTAG ICE
+.BR \-B ,\  \-\-jtag-bitrate \ <rate>
+Set the bitrate that the JTAG box communicates with the AVR target device.
+This must be less than 1/4 of the frequency of the target. Valid values are
+1 MHz, 500 kHz, 250 kHz or 125 kHz for the JTAG ICE mkI,
+anything between 22 kHz through approximately 6400 kHz for the
+JTAG ICE mkII. (default: 1 MHz)
 .TP
 .BR \-C ,\  \-\-capture
 Capture running program.
@@ -99,15 +124,31 @@ Capture running program.
 Note: debugging must have been enabled prior to starting the program. (e.g.,
 by running avarice earlier)
 .TP
+.BR \-c ,\  \-\-daisy-chain \ <ub,ua,bb,ba>
+Setup JTAG daisy-chain information.
+.br
+Four comma-separated parameters need to be provided, corresponding to
+\fIunits before\fP, \fIunits after\fP, \fIbits before\fP, and
+\fIbits after\fP.
+.TP
+.BR \-D ,\  \-\-detach
+Detach once synced with JTAG ICE
+.TP
+.BR \-d ,\  \-\-debug
+Enable printing of debug information.
+.TP
+.BR \-e ,\  \-\-erase
+Erase target.
+.TP
+.BR \-f ,\  \-\-file \ <filename>
+Specify a file for use with the --program and --verify options. If --file is
+passed and neither --program or --verify are given then --program is implied.
+.TP
 .BR \-I ,\  \-\-ignore-intr
 Automatically step over interrupts.
 .br
 Note: EXPERIMENTAL. Can not currently handle
 devices fused for compatibility.
-.TP
-.BR \-f ,\  \-\-file \ <filename>
-Specify a file for use with the --program and --verify options. If --file is
-passed and neither --program or --verify are given then --program is implied.
 .TP
 .BR \-j ,\  \-\-jtag \ <devname>
 Port attached to JTAG box (default: /dev/avrjtag).
@@ -119,12 +160,16 @@ If there are multiple JTAG ICE mkII devices connected to the system
 through USB, this string may be followed by the (trailing part of the)
 ICE's serial number, delimited from the \fIusb\fR by a colon.
 .TP
-.BR \-B ,\  \-\-jtag-bitrate \ <rate>
-Set the bitrate that the JTAG box communicates with the AVR target device.
-This must be less than 1/4 of the frequency of the target. Valid values are
-1 MHz, 500 kHz, 250 kHz or 125 kHz for the JTAG ICE mkI,
-anything between 22 kHz through approximately 6400 kHz for the
-JTAG ICE mkII. (default: 1 MHz)
+.BR \-L ,\  \-\-write-lockbits \ <ll>
+Write lock bits. The lock byte data must be given in two digit hexidecimal
+format with zero padding if needed.
+.TP
+.BR \-l ,\  \-\-read-lockbits
+Read the lock bits from the target. The individual bits are also displayed
+with names.
+.TP
+.BR \-P ,\  \-\-part \ <name>
+Target device name (e.g. atmega16)
 .TP
 .BR \-p ,\  \-\-program
 Program the target. Binary filename must be specified with --file option.
@@ -134,14 +179,14 @@ The old behaviour of automatically erasing the target before
 programming is no longer done. You must explicitly give the --erase option
 for the target to be erased.
 .TP
-.BR \-v ,\  \-\-verify
-Verify program in device against file specified with --file option.
-.TP
-.BR \-e ,\  \-\-erase
-Erase target.
-.TP
 .BR \-r ,\  \-\-read-fuses
 Read fuses bytes.
+.TP
+.BR \-V ,\  \-\-version
+Print version information.
+.TP
+.BR \-v ,\  \-\-verify
+Verify program in device against file specified with --file option.
 .TP
 .BR \-W ,\  \-\-write-fuses \ <eehhll>
 Write fuses bytes. \fBee\fR is the extended fuse byte, \fBhh\fR is the high
@@ -152,17 +197,6 @@ must currently be given.
 .B NOTE:
 Current, if the target device doesn't have an extended fuse byte
 (e.g. the atmega16), the you should set ee==ll when writing the fuse bytes.
-.TP
-.BR \-l ,\  \-\-read-lockbits
-Read the lock bits from the target. The individual bits are also displayed
-with names.
-.TP
-.BR \-L ,\  \-\-write-lockbits \ <ll>
-Write lock bits. The lock byte data must be given in two digit hexidecimal
-format with zero padding if needed.
-.TP
-.BR \-P ,\  \-\-part \ <name>
-Target device name (e.g. atmega16)
 .PP
 \fIHOST_NAME\fR defaults to 0.0.0.0 (listen on any interface) if not given.
 .PP
